# cogames-autoresearch

./: .gitignore  EVOLUTIONARY_RL_PLAN.md  ISSUE_001.md  OVERTRAINING_ANALYSIS.md  PBT_IMPLEMENTATION.md  README.md  analysis.ipynb  analysis.py  autoresearch_loop.sh  continuous_train.sh  prepare.py  program.md  pyproject.toml  resources  results.tsv  reward_breakdown_analysis.md  runpod_setup.sh  sync_notion.sh  train.py  watchdog.sh
best_checkpoint/: README.md  model_000330.pt
checkpoints/931366d/: model_final.pt
discussions/: 004-session-report-0-499-234-0-in-23-experiments-mar7-role-condi.md
experiments/: README.md  exp1_analysis.md  exp2_analysis.md  exp2_extended_analysis.md
knowledge/: alessandro_research_ideas_one.md  alessandro_research_ideas_two.md  cogames_overview.md  findings.md  memory_issues.md  reward_variants.md  training_tips.md
knowledge/papers/baker_2019_hide_and_seek/: paper.md
knowledge/papers/barrett_stone_ad_hoc_teamwork/: paper.md
knowledge/papers/hoel_2025_causal_emergence/: paper.md
knowledge/papers/jaderberg_2019_ftw/: paper.md
knowledge/papers/jaques_2019_social_influence/: paper.md
knowledge/papers/levin_2022_tame/: paper.md
knowledge/papers/mappo_yu_2021/: paper.md
knowledge/papers/rashid_2018_qmix/: paper.md
pbt/: manager.py
results/: discussion_11-march-night--looking-for-heart.md  discussion_12-march-night--looking-for-heart.md  discussion_mar-9-night--mappo-baseline.md  discussion_mar17long.md  discussion_mar18-pbt.md  results_mar7.tsv
train_dir/177346958322/: model_000740.pt
(+2 files in other folders)
